# cvxFin

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-Test  Makefile  README.md  build.sh  d1.py  docker-compose.test.yml  docker-compose.yml  makedoc.py  pyproject.toml  requirements.txt  setup.py  slides.py  taskfile.yml  test.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml  renovate.json
.github/workflows/: basic.yml  book.yml  ci.yml  pre-commit.yml  release.yml  tag.yml
binder/: Dockerfile
book/: .buildinfo  _config.yml  genindex.html  objects.inv  search.html  searchindex.js
book/docs/: api.html  api.md  index.html  index.md  nb.html  reports.html
book/sphinx/: conf.py
build-Linux-3.11/: show.txt
cvx/: cvxFinance.py  cvxRegression.py
cvx/finance/: Finance.py  __init__.py  cvxRegression.py  util.py
cvx/tests/: testCvxFinance.py
cvxFin/: cvxFinance.py  cvxRegression.py  util.py
cvxFin/cvx/: cvxFinance.py  cvxRegression.py  util.py
cvxFin/util/: cone.py  linearProgram.py  markowitzProgram.py  quadraticProgram.py
doc/: Makefile  conf.py  cvxFin.cvx.rst  cvxFin.rst  cvxFin.util.rst  index.rst  make.bat  make.py
pdoc/: cvx.html  search.js
pdoc/cvx/: finance.html
source/: conf.py  index.rst
sphinx/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/.doctrees/: environment.pickle  index.doctree  license.doctree
sphinx/_modules/: index.html
sphinx/autoapi/: index.html
test/: conftest.py  cvxFinanceTest.py  test_cvxFinance.py
tests/: conftest.py  suite.py  test_cvxFinance.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/cvx/: testCvxFinance.py
tests/html-coverage/: class_index.html  d_ad45516c875a589e_Finance_py.html  d_ad45516c875a589e___init___py.html  d_ad45516c875a589e_cvxRegression_py.html  d_ad45516c875a589e_util_py.html  function_index.html  index.html  status.json  z_ad45516c875a589e_Finance_py.html  z_ad45516c875a589e___init___py.html  z_ad45516c875a589e_cvxRegression_py.html  z_ad45516c875a589e_util_py.html
tests/html-report/: report.html
tests_3.11/coverage/: coverage.json  coverage.xml
tests_3.11/html-coverage/: class_index.html  function_index.html  index.html  z_ad45516c875a589e_Finance_py.html  z_ad45516c875a589e___init___py.html  (+2 more)
util/: linearProgram.py  markowitzProgram.py  quadraticProgram.py
(+37 files in other folders)
