[tool.poetry]
name = "cvxFin"
version = "0.0.0"
description = "Good old faithful portfolio construction"
authors = ["Thomas Schmelzer"]
readme = "README.md"
repository = "https://github.com/tschm/cvxFin"
packages = [{include = "cvx"}]
homepage = "https://tschm.github.io/cvxFin"


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "*"
cvxpy-base = "*"
scikit-learn = "*"
scipy = ">=1.10.0"
clarabel = "*"

[tool.poetry.dev-dependencies]
pytest = "8.3.2"
pytest-cov = "5.0.0"
pre-commit = "3.8.0"

[build-system]
requires = ["poetry>=1.6.0"]
build-backend = "poetry.core.masonry.api"
