[project]
name = "cvxFin"
version = "0.0.0"
description = "Good old faithful portfolio construction"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
repository = "https://github.com/tschm/cvxFin"
homepage = "https://tschm.github.io/cvxFin"
requires-python = ">=3.10"
dependencies = [
    "clarabel>=0.9.0",
    "cvxpy-base>=1.6.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cvx"]
