[project]
name = "cvxFin"
version = "0.0.0"
description = "Good old faithful portfolio construction"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clarabel>=0.9.0",
    "cvxpy-base>=1.6.0",
    "numpy>=2.2.0",
    "scikit-learn>=1.6.0",
]

[project.urls]
repository = "https://github.com/tschm/cvxFin"
homepage = "https://tschm.github.io/cvxFin"

[project.license]
file = "LICENSE"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cvx"]

[tool.deptry.per_rule_ignores]
DEP003 = ["cvx"]
DEP002 = ["cvxpy-base", "clarabel"]
